--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -18,5 +18,6 @@ server {
     # an index of the applications available in this directory will be shown.
     directory_index on;
   }
+  sanitize_errors false;
   preserve_logs true;
 }
