--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -3,21 +3,20 @@ run_as jovyan;
 
 # Define a server that listens on port 3838
 server {
-  listen 3839;
+  listen 3838;
   
   # Define a location at the base URL
   location / {
     
     # Host the directory of Shiny Apps stored in this directory
-    site_dir /srv/shiny-server;
+    site_dir /home/jovyan;
     
     # Log all Shiny output to files in this directory
-    log_dir /var/log/shiny-server;
+    log_dir /home/jovyan/logs_custom;
     
     # When a user visits the base URL rather than a particular application,
     # an index of the applications available in this directory will be shown.
     directory_index on;
   }
-  sanitize_errors false;
   preserve_logs true;
 }
