--- a/my.cnf
+++ b/my.cnf
@@ -36,7 +36,7 @@ pid-file	= /var/run/mysqld/mysqld.pid
 socket		= /var/run/mysqld/mysqld.sock
 port		= 3306
 basedir		= /usr
-datadir		= /home/jovyan/mysql
+datadir		= /home/jovyan/iLCM/mysql
 tmpdir		= /tmp
 lc_messages_dir	= /usr/share/mysql
 lc_messages	= en_US
